objects/FINS_Data_Cloud_Mock__c.object
<CustomObject>
    <description>This custom object provides internal users with the ability to control local, on-platform data attributes that would otherwise have been returned from Data Cloud. These attributes are injected into various FSC features thereby allowing users to demo the features without the need to provision an actual DC instance, and/ or have it return data from a connected source.</description>
    <fields>
        <fullName>Average_Monthly_Expenditure_Cover__c</fullName>
        <description>Number of months that expenses can be paid from available balances.</description>
        <label>Average Monthly Expenditure Cover</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Expenses__c</fullName>
        <formula>Total_Expense__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Income__c</fullName>
        <formula>Total_Income__c / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Surplus__c</fullName>
        <formula>Total_Surplus__c /12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly Surplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <label>Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>DataCloud_Mockeries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Use_Ratio__c</fullName>
        <description>Ratio of credit used to credit available across all cards.</description>
        <label>Credit Card Use Ratio</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deposits_for_1_year__c</fullName>
        <description>Total / average deposits for the past 1 year, starting from the last day of the previous month.</description>
        <label>Deposits for 1 year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposits_for_3_Months__c</fullName>
        <description>Total / average deposits for the past 3 months , starting from the last day of the previous month.</description>
        <label>Deposits for 3 Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposits_for_6_Months__c</fullName>
        <description>Total / average deposits for the past 6 months, starting from the last day of the previous month.</description>
        <label>Deposits for 6 Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenses_for_1_Year__c</fullName>
        <description>Total / average expenses for the past 1 year, starting from the last day of the previous month.</description>
        <label>Expenses for 1 Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenses_for_3_Months__c</fullName>
        <description>Total / average expenses for the past 3 months, starting from the last day of the previous month.</description>
        <label>Expenses for 3 Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenses_for_6_Months__c</fullName>
        <description>Total / average expenses for the past 6 months, starting from the last day of the previous month.</description>
        <label>Expenses for 6 Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Balance_Net_Worth__c</fullName>
        <description>Sum of financial account balances including both managed and held away, less the total outstanding credit.</description>
        <label>Financial Account Balance Net Worth</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Balance_Wallet_Share__c</fullName>
        <description>Ratio of Managed Financial Account Balance to Held Away Financial Account Balance.</description>
        <label>Financial Account Balance Wallet Share</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Held_Away_Financial_Account_Balance__c</fullName>
        <description>Sum of all Financial Account balances of type General, Investment, Savings, and Checking that are held away.</description>
        <label>Held Away Financial Account Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Large_Deposit__c</fullName>
        <description>Deposit that is 2 standard deviation larger than an average deposit.</description>
        <label>Large Deposit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Large_Expense__c</fullName>
        <description>Expense that is 2 standard deviation larger than an average expense.</description>
        <label>Large Expense</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Managed_Financial_Account_Balance__c</fullName>
        <description>Sum of all Financial Account balances of type General, Investment, Savings, and Checking under management.</description>
        <label>Managed Financial Account Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Deposits_by_Category__c</fullName>
        <description>The sum of all monthly inflow transactions sorted by merchant category code.</description>
        <label>Monthly Deposits by Category</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Expenses_by_Category__c</fullName>
        <description>Sum of all debit transactions broken down by category for the calendar month.</description>
        <label>Monthly Expenses by Category</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Inflow_Transactions__c</fullName>
        <description>The sum of all monthly inflow transactions.</description>
        <label>Monthly Inflow Transactions</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Assets_to_Liabilities__c</fullName>
        <description>Total assets divided by total liabilities.</description>
        <label>Percentage of Assets to Liabilities</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Cash_Inflow_Spent__c</fullName>
        <description>The total monthly cash inflow divided by the total cash outflow.</description>
        <label>Percentage of Cash Inflow Spent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Expenses__c</fullName>
        <description>The sum of all outgoing transactions year to date.</description>
        <label>Total Annual Expenses</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Deposits_by_Month_Last_12_Months__c</fullName>
        <description>The total of all financial accounts inflow transactions by month for the last 12 months.</description>
        <label>Total Deposits by Month Last 12 Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expense__c</fullName>
        <label>Total Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expenses_by_Month_Last_12_Months__c</fullName>
        <description>The total of each financial account’s outgoing transactions by month for the last 12 months.</description>
        <label>Total Expenses by Month Last 12 Months</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Deposits__c</fullName>
        <description>The sum of all monthly deposits.</description>
        <label>Total Monthly Deposits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Expenses__c</fullName>
        <description>The sum of all monthly outgoing transactions.</description>
        <label>Total Monthly Expenses</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Accounts__c</fullName>
        <description>Number of financial accounts held by the customer.</description>
        <label>Total Number of Accounts</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Credit__c</fullName>
        <description>Total of all credit and lending product balances.</description>
        <label>Total Outstanding Credit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Surplus__c</fullName>
        <formula>Total_Income__c - Total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Surplus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Data Cloud Mock</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DCM-{00000000}</displayFormat>
        <label>Data Cloud Mock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Cloud Mocks</pluralLabel>
    <recordTypes>
        <fullName>Calculated_Insights</fullName>
        <active>true</active>
        <label>Calculated Insights</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cashflow</fullName>
        <active>true</active>
        <label>Cashflow</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>